--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,10 +23,15 @@ pytest-cov = "^4.1.0"
 
 [tool.poetry.group.docs.dependencies]
 mkdocs = "^1.5.3"
-mkdocstrings = "^0.24.0"
-mkdocs-material = "^9.5.3"
-mkdocs-minify-plugin = "^0.7.2"
+mkdocs-material = "^9.4.8"
+mkdocs-minify-plugin = "^0.7.1"
 mkdocs-table-reader-plugin = "^2.0.3"
+mkdocs-include-markdown-plugin = "^6.0.4"
+mkdocs-gen-files = "^0.5.0"
+mkdocs-literate-nav = "^0.6.1"
+mkdocs-section-index = "^0.3.8"
+mkdocstrings = {extras = ["python"], version = "^0.24.0"}
+
 
 [tool.poetry.scripts]
 pycli = "pycli.cli.cli:cli"
